<resources>
    <string name="app_name">FitFeed</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="new_user">New User?</string>
    <string name="signup">SignUp</string>
    <string name="height">Height (in cms)</string>
    <string name="weight">Weight (in kgs)</string>
    <string name="password_again">Confirm Password</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="name">Name</string>
    <string name="welcome_to_fitfeed">Welcome to FitFeed</string>
    <string name="logout">Logout</string>
    <string name="view_profile">View Profile</string>
    <string name="t1">Hey, what do you plan to eat today?</string>
    <string name="ok_healthy">Good Choice! Its a very Healthy Option</string>
    <string name="ok">OK</string>
    <string name="not_healthy">Its Not a healthy option</string>
    <string name="food">Hey, what do you want to eat ?</string>
    <string name="breakfast">Hey, what do you want to eat for breakfast ?</string>
    <string name="lunch">Hey, what do you want to eat for lunch ?</string>
    <string name="dinner">Hey, what do you want to eat for dinner ?</string>
    <string name="snacks">Hey, what fo you want to eat for snacks ?</string>
</resources>
