<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fitfeed"
   tools:context="com.example.hp.fitfeed.MainActivity"
    android:clipChildren="false"
    android:focusable="false"
    android:alpha="0.8"
   >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textAllCaps="true"
        android:textSize="25dp"
        android:textStyle="bold"
        android:typeface="normal"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView4" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:gravity="center"
        android:layout_below="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp">



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:id="@+id/usernameEditText"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:id="@+id/passwordEditText"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginButton"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="35dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#FFFFFF"
            android:layout_margin="20dp">

        </View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"

            android:textColor="#FFFFFF"
            android:textSize="35dp"
            android:typeface="normal"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:id="@+id/signupButton"
            android:backgroundTint="@android:color/holo_red_light"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#FFFFFF"
            android:textSize="25dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="FitFeed"
        android:textSize="60dp"
        android:textStyle="bold|italic"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF" />


</RelativeLayout>
