<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/f4"
    tools:context="com.example.hp.fitfeed.RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/abc_primary_text_disable_only_material_light"
          android:textSize="20dp"
            android:typeface="normal"
  />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_marginLeft="30dp"
            android:id="@+id/newUsernameEditText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/abc_primary_text_disable_only_material_light"
            android:textSize="20dp"
            android:typeface="normal"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginLeft="30dp"
            android:id="@+id/newPasswordEditText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_again"
            android:textColor="@color/abc_primary_text_disable_only_material_light"
            android:textSize="20dp"
            android:typeface="normal"
            android:id="@+id/passwordAgainEditText"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginLeft="5dp"
            android:id="@+id/newPasswordEditText2"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textColor="@color/abc_primary_text_disable_only_material_light"
            android:textSize="20dp"
            android:typeface="normal"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"

            android:layout_marginLeft="5dp"
            android:id="@+id/heightEditText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/abc_primary_text_disable_only_material_light"
            android:textSize="20dp"
            android:typeface="normal"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="10"

            android:layout_marginLeft="5dp"
            android:id="@+id/weightEditText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/abc_primary_text_disable_only_material_light"
            android:textSize="20dp"
            android:typeface="normal"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:ems="15"

            android:layout_marginLeft="20dp"
            android:id="@+id/ageEditText"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textColor="@color/abc_primary_text_disable_only_material_light"
            android:textSize="20dp"
            android:typeface="normal"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sexRadioGroup"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginLeft="5dp"
            android:orientation="horizontal"
            >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:id="@+id/femaleradioButton"
                    android:layout_marginLeft="30dp"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:id="@+id/maleradioButton2" />


        </RadioGroup>
    </LinearLayout>

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/register"
        android:id="@+id/registerButton" />
</LinearLayout>
    </ScrollView>
</RelativeLayout>
